# deepr

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  main.py  pyproject.toml
src/deepr/: command.py  latex.py  main.py
tests/: test_command.py  test_latex.py
